# uls

./: .gitignore  CMakeLists.txt  Makefile  main.c  mx_dirlist_out.c  mx_errors.c  mx_list_size_dir.c  mx_out_1.c  mx_out_G.c  mx_print_name_or_link.c  mx_print_perm_and_link.c  mx_print_reg.c  mx_print_uid_gid.c  mx_push_back_dir.c  mx_sort_list_dir.c  mx_sortbylexic.c  mx_sortbysize.c  mx_sortbytmod.c  uls  uls.h
inc/: uls.h
libmx/: Makefile
libmx/inc/: libmx.h  mx_dirlist_out.c
libmx/src/: mx_del_list.c  mx_delete_list.c  mx_file_to_str.c  mx_pow.c  mx_quicksort.c  mx_read_line.c  mx_sort_list.c  mx_sqrt.c  mx_strstr.c
src/: main.c  mx_comparator.c  mx_constructor.c  mx_create_lists.c  mx_create_node_dir.c  mx_delete_list_dir.c  mx_dirlist_del.c  mx_else_FG.c  mx_errors.c  mx_get_file_type.c  mx_get_flags.c  mx_get_nums.c  mx_init_opts.c  mx_input_arg.c  mx_list_size_dir.c  mx_make_table.c  mx_other.c  mx_out_1.c  mx_out_F.c  mx_out_G.c  mx_out_l.c  mx_out_no_file.c  mx_print_flag_1.c  mx_print_l_flag.c  mx_print_name_or_link.c  mx_print_perm_and_link.c  mx_print_reg.c  mx_print_size_and_time.c  mx_print_table.c  mx_print_uid_gid.c  mx_push_back_dir.c  mx_push_front_dir.c  mx_sort_list_dir.c  mx_sortbylexic.c  mx_sortbysize.c  mx_sortbytmod.c
