cmake_minimum_required(VERSION 3.15)
project(ulswm C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(inc)
include_directories(libmx)
include_directories(libmx/inc)
include_directories(libmx/src)
include_directories(src)

add_executable(ulswm
    inc/uls.h
    libmx/inc/libmx.h
    libmx/src/mx_atoi.c
    libmx/src/mx_binary_search.c
    libmx/src/mx_bubble_sort.c
    libmx/src/mx_count_substr.c
    libmx/src/mx_count_words.c
    libmx/src/mx_create_node.c
    libmx/src/mx_del_extra_spaces.c
    libmx/src/mx_del_strarr.c
    libmx/src/mx_delete_list.c
    libmx/src/mx_file_to_str.c
    libmx/src/mx_foreach.c
    libmx/src/mx_get_char_index.c
    libmx/src/mx_get_substr_index.c
    libmx/src/mx_hex_to_nbr.c
    libmx/src/mx_isalpha.c
    libmx/src/mx_isdigit.c
    libmx/src/mx_isspace.c
    libmx/src/mx_itoa.c
    libmx/src/mx_list_size.c
    libmx/src/mx_memccpy.c
    libmx/src/mx_memchr.c
    libmx/src/mx_memcmp.c
    libmx/src/mx_memcpy.c
    libmx/src/mx_memmem.c
    libmx/src/mx_memmove.c
    libmx/src/mx_memrchr.c
    libmx/src/mx_memset.c
    libmx/src/mx_nbr_to_hex.c
    libmx/src/mx_pop_back.c
    libmx/src/mx_pop_front.c
    libmx/src/mx_pow.c
    libmx/src/mx_print_strarr.c
    libmx/src/mx_print_unicode.c
    libmx/src/mx_printchar.c
    libmx/src/mx_printerr.c
    libmx/src/mx_printint.c
    libmx/src/mx_printstr.c
    libmx/src/mx_push_back.c
    libmx/src/mx_push_front.c
    libmx/src/mx_quicksort.c
    libmx/src/mx_read_line.c
    libmx/src/mx_realloc.c
    libmx/src/mx_replace_substr.c
    libmx/src/mx_sort_list.c
    libmx/src/mx_sqrt.c
    libmx/src/mx_str_reverse.c
    libmx/src/mx_strcat.c
    libmx/src/mx_strcmp.c
    libmx/src/mx_strcpy.c
    libmx/src/mx_strdel.c
    libmx/src/mx_strdup.c
    libmx/src/mx_strjoin.c
    libmx/src/mx_strlen.c
    libmx/src/mx_strncat.c
    libmx/src/mx_strncmp.c
    libmx/src/mx_strncpy.c
    libmx/src/mx_strndup.c
    libmx/src/mx_strnew.c
    libmx/src/mx_strsplit.c
    libmx/src/mx_strstr.c
    libmx/src/mx_strtrim.c
    libmx/src/mx_swap_char.c
    src/mx_asc_sorting.c
    src/mx_constructor.c
    src/mx_create_node_dir.c
    src/mx_delete_list_dir.c
    src/mx_desc_sorting.c
    src/mx_get_digits.c
    src/mx_get_file_type.c
    src/mx_get_flags.c
    src/mx_list_size_dir.c
    src/mx_make_table.c
    src/mx_other.c
    src/mx_print_flag_1.c
    src/mx_print_G_flag.c
    src/mx_print_l_flag.c
    src/mx_print_name_or_link.c
    src/mx_print_perm_and_link.c
    src/mx_print_size_and_time.c
    src/mx_print_table.c
    src/mx_print_uid_gid.c
    src/mx_push_back_dir.c
    src/mx_push_front_dir.c
    src/mx_sort_list_dir.c
    src/mx_uls.c)
